# dbt-prql

./: .pre-commit-config.yaml  README.md  Taskfile.yml  pyproject.toml  setup.cfg  test.sh  zzz_dbt_prql.pth
dbt_prql/: __init__.py  patch.py
tests/: .gitignore  README.md  profiles.yml  pyproject.toml
tests/dbt_test_project/: dbt_project.yml
tests/dbt_test_project/models/: src_sources.yml  test_model_1.sql
