[tool.poetry]
authors = ["Maximilian Roos <m@maxroos.com>"]
description = "Write PRQL in dbt models"
homepage = "https://github.com/prql/dbt-prql"
include = ["zzz_dbt_prql.pth"]
license = "Apache-2.0"
name = "dbt-prql"
readme = "README.md"
repository = "https://github.com/prql/dbt-prql"
version = "0.2.3"

[tool.poetry.dependencies]
# We're conservative on these because we're using internal APIs. 
# We'll try and quite quickly on a new _.X._ release from dbt.
# And we can unblock this when we have upstream tests https://github.com/prql/dbt-prql/issues/6
dbt-core = ">=1.1.0,<1.3.0"
prql_python = ">=0.2.0"
python = ">=3.7.3"

dbt-core = "~1.2.0"
prql_python = ">=0.2.3"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.isort]
default_section = "THIRDPARTY"
float_to_top = true
profile = "black"
skip_gitignore = true
