[tool.poetry]
authors = ["Maximilian Roos <m@maxroos.com>"]
description = "Test suite for dbt-prql"
homepage = "https://github.com/prql/dbt-prql"
license = "Apache-2.0"
name = "dbt-prql-test"
readme = "README.md"
repository = "https://github.com/prql/dbt-prql"
version = "0"

[tool.poetry.dependencies]
python = ">=3.7.3"

# `develop=true` here means `zzz_dbt_prql.pth` isn't installed
dbt-prql = {path = "..", develop = false}

[tool.poetry.dev-dependencies]
dbt-bigquery = ">=1.1.0,<1.3.0"
dbt-postgres = ">=1.1.0,<1.3.0"

black = "*"
flake8 = "*"
mypy = "*"
pdbpp = "*"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.isort]
default_section = "THIRDPARTY"
float_to_top = true
profile = "black"
skip_gitignore = true
